--- a/index.html
+++ b/index.html
@@ -55,69 +55,19 @@
     	      </ul>
     	    </div><!-- /.navbar-collapse -->
     	  </div><!-- /.container-fluid -->
-    	</nav>
+      </nav>
 
-      <h2 class="text-center">About</h2>
-
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img src="src/img/meetings/html_css.jpg" class=" center-block" alt="HTML & CSS">
-            <div class="carousel-caption">
-              <h3>HTML & CSS Web Development Tutorial</h3>
-            </div>
-          </div>
-
-          <div class="item">
-            <img src="src/img/meetings/android.jpg" class=" center-block" alt="Android">
-            <div class="carousel-caption">
-              <h3>Android App Development Tutorial</h3>
-            </div>
-          </div>
-
-          <div class="item">
-            <img src="src/img/meetings/socketio_1.jpeg" class=" center-block" alt="socket.io">
-            <div class="carousel-caption">
-              <h3>socket.io Chat Room Tutorial</h3>
-            </div>
-          </div>
-
-          <div class="item">
-            <img src="src/img/meetings/phaser_2.jpeg" class=" center-block" alt="Phaser JS Game">
-            <div class="carousel-caption">
-              <h3>JavaScript Web Browser Game Tutorial</h3>
-            </div>
-          </div>
-        </div>
-
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
+      <div class="banner"></div>
 
       <!-- About -->
       <div class="container well about-text">
         <div class="row col-xs-12">
+            <h2 class="text-center">About</h2>
           <p>The Software Engineering Club strives to expose beginner Computer Science students to practical software development technologies and concepts they will not learn or be exposed to in their first or second year. These are technologies and skills that are heavily used in the industry and the real world, but not taught in classes. This can benefit the student to get involved with other clubs, hackathons, get a part time internship doing development work, enable them to succeed in interviews, secure summer internships and full time roles, and expand their breadth of knowledge as a developer.</p>
 
           <p>We also connect students with software companies through networking events and workshops/tutorials put on by companies.</p>
 
-          <p>Feel free to contact any of the officers below for any questions or concerns</p>
+          <p>Feel free to contact any of the officers below for any questions or concerns.</p>
         </div>
       </div>
 
