--- a/join.html
+++ b/join.html
@@ -60,7 +60,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 title-container">
-            <h2 class="">How to join the Software Engineering Club at UF</h2>
+            <h2 class="">How to Join the Software Engineering Club at UF</h2>
           </div>
           <div class="col-sm-12 join-description">
             <p>
