Changed the logo. Added the new officers

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     	      </button>
     	      <a class="navbar-brand" href="index.html" >
     	        <img style="max-height: 130%" src="src/img/logo.png">
-          		<span>UF Software Engineering Club</span>
     	      </a>
     	    </div>
 
@@ -74,6 +73,8 @@
       <div class="row" style="margin-top: 30px; margin-bottom: 20px;">
         <h2 class="text-center">Officers</h2>
       </div>
+
+
 
       <div class="container officers">
           <div class="row">
@@ -122,6 +123,30 @@
 
           <div class="row officer-row">
               <div class="col-md-4 ">
+                <img src="src/img/officers/julian.jpg" class="img-responsive ">
+                <div class="text-center">
+                  <h4>Julian Cordova</h4>
+                  <p>Ambassador</p>
+                </div>
+              </div>
+              <div class="col-md-4 ">
+                <img src="src/img/officers/christian.jpg" class="img-responsive ">
+                <div class="text-center">
+                  <h4>Christian Sarmiento</h4>
+                  <p>Ambassador</p>
+                </div>
+              </div>
+              <div class="col-md-4 ">
+                <img src="src/img/officers/navid.jpg" class="img-responsive ">
+                <div class="text-center">
+                  <h4>Navid Ghomeshi</h4>
+                  <p>Ambassador</p>
+                </div>
+              </div>
+          </div>
+
+          <div class="row officer-row">
+              <div class="col-md-4 ">
                 <img src="src/img/officers/daniel.jpg" class="img-responsive ">
                 <div class="text-center">
                   <h4>Daniel Garzon</h4>
@@ -145,27 +170,21 @@
               </div>
           </div>
 
-
-          <div class="row officer-row">
-              <div class="col-md-4 ">
-                <img src="src/img/officers/julian.jpg" class="img-responsive ">
+          <div class="row">
+              <div class="col-md-6 ">
+                <img src="src/img/officers/gk.png" class="img-responsive ">
                 <div class="text-center">
-                  <h4>Julian Cordova</h4>
-                  <p>Ambassador</p>
+                  <h4>Garrett Kost</h4>
+                  <p></p>
+                  <a href="mailto:matthewh2@ufl.edu" data-toggle="tooltip" data-placement="top" title="Email"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
                 </div>
               </div>
-              <div class="col-md-4 ">
-                <img src="src/img/officers/christian.jpg" class="img-responsive ">
+              <div class="col-md-6 ">
+                <img src="src/img/officers/megan.jpg" class="img-responsive">
                 <div class="text-center">
-                  <h4>Christian Sarmiento</h4>
-                  <p>Ambassador</p>
-                </div>
-              </div>
-              <div class="col-md-4 ">
-                <img src="src/img/officers/navid.jpg" class="img-responsive ">
-                <div class="text-center">
-                  <h4>Navid Ghomeshi</h4>
-                  <p>Ambassador</p>
+                  <h4>Megan Morich</h4>
+                  <p>Graphic Designer</p>
+                  <a href="mailto:mckennaville2015@gmail.com" data-toggle="tooltip" data-placement="top" title="Email"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
                 </div>
               </div>
           </div>
