--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
           <div class="row">
               <div class="col-md-6 ">
-                <img src="src/img/officers/gk.png" class="img-responsive ">
+                <img src="src/img/officers/garrett.jpg" class="img-responsive ">
                 <div class="text-center">
                   <h4>Garrett Kost</h4>
                   <p></p>
