--- a/tutorials.html
+++ b/tutorials.html
@@ -48,6 +48,7 @@
               <!-- <li class="nav-item"><a class="nav-link" href="events.html"> Events </a></li> -->
               <!-- <li class="nav-item"><a class="nav-link" href="projects.html"> Projects </a></li> -->
               <li class="nav-item"><a class="nav-link" href="tutorials.html"> Tutorials </a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#sponsors"> Sponsors </a></li>
               <li class="nav-item"><a class="nav-link" href="index.html#connect"> Join </a></li>
             </ul>
           </div>
@@ -60,7 +61,7 @@
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum gravida in mi ac egestas. Nullam dapibus pulvinar metus, in congue nunc tempor posuere.</p> -->
         </div>
         <div class="banner-img img-thumb text-center wow fadeInUp" data-wow-delay="0.6s">
-          <img src="img/banner/IMG_0969.PNG" alt="Shard" class="shard">
+          <img src="img/banner/tutorials-banner.png" alt="Shard" class="shard">
         </div>
       </div>
     </header>
