--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <h3 class="section-title ">About Us</h3>
       <div class="container">
           <div class="col-lg-12 mx-auto">
-            <p class="lead text-center">The Software Engineering Club strives to expose beginner Computer Science students
+            <p class="text-center">The Software Engineering Club strives to expose beginner Computer Science students
               to practical software development technologies and concepts they will not learn or be exposed to
               in their first or second year. These are technologies and skills that are heavily used in the
               industry and the real world, but not taught in classes. This can benefit the student to get
