--- a/index.html
+++ b/index.html
@@ -57,15 +57,29 @@
           </div>
         </nav>
         <!-- B A N N E R -->
-        <div id="banner" class="welcome d-flex justify-content-center flex-column">
+        <div id="banner">
+          <!-- <center> -->
+            <div class="text">
+              <h2 class="head-title"> UF Software Engineering Club</h2>
+              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum gravida in mi ac egestas. Nullam dapibus pulvinar metus, in congue nunc tempor posuere.</p> -->
+            </div>
+            <div class="banner-img">
+              <img src="img/banner/home-banner.png">
+            </div>
+          <!-- </center> -->
+        </div>
+
+
+
+        <!-- <div id="banner" class="welcome d-flex justify-content-center flex-column">
           <div class="inner-wrapper mt-auto">
             <h2 class="head-title wow fadeInUp"> UF Software Engineering Club</h2>
-            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum gravida in mi ac egestas. Nullam dapibus pulvinar metus, in congue nunc tempor posuere.</p> -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum gravida in mi ac egestas. Nullam dapibus pulvinar metus, in congue nunc tempor posuere.</p>
           </div>
           <div class="banner-img img-thumb text-center wow fadeInUp" data-wow-delay="0.6s">
             <img src="img/banner/home-banner.png" alt="Shard" class="shard">
           </div>
-        </div>
+        </div> -->
     </header>
 
 
