--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         <!-- B A N N E R -->
         <div id="banner">
           <!-- <center> -->
-            <div class="text">
+            <div class="text wow fadeInUp">
               <h2 class="head-title"> UF Software Engineering Club</h2>
               <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum gravida in mi ac egestas. Nullam dapibus pulvinar metus, in congue nunc tempor posuere.</p> -->
             </div>
-            <div class="banner-img">
+            <div class="banner-img wow fadeInUp" data-wow-delay="0.6s">
               <img src="img/banner/home-banner.png">
             </div>
           <!-- </center> -->
