Fixed the banner height

--- a/tutorials.html
+++ b/tutorials.html
@@ -116,7 +116,7 @@
         </div>
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2019 Copyright:
-          <a href="https://mdbootstrap.com/education/bootstrap/"> ufsec.com</a> All rights reserved.
+          <a href="http://ufsec.com/"> ufsec.com</a> All rights reserved.
         </div>
     </footer>
 
