Added the project page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html#about-us"> About Us </a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="events.html"> Events </a></li> -->
-                <!-- <li class="nav-item"><a class="nav-link" href="projects.html"> Projects </a></li> -->
+                <li class="nav-item"><a class="nav-link" href="projects.html"> Projects </a></li>
                 <li class="nav-item"><a class="nav-link" href="tutorials.html"> Tutorials </a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#sponsors"> Sponsors </a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#connect"> Join </a></li>
@@ -187,9 +187,6 @@
             <h5>Ankit Vishnubhotla</h5>
             <p class="font-weight-light mb-0">Treasurer</p>
             <div id="social-links">
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-linkedin-in"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-github"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fas fa-globe"></i></a> -->
             </div>
           </div>
         </div>
@@ -203,9 +200,6 @@
             <h5>Daniela Vertiz</h5>
             <p class="font-weight-light mb-0">Secretary</p>
             <div id="social-links">
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-linkedin-in"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-github"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fas fa-globe"></i></a> -->
             </div>
           </div>
         </div>
@@ -218,7 +212,6 @@
             <div id="social-links">
               <a href="http://linkedin.com/in/garrettkost"><i class="fab fa-linkedin-in"></i></a>
               <a href="https://github.com/garrettkost"><i class="fab fa-github"></i></a>
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fas fa-globe"></i></a> -->
             </div>
           </div>
         </div>
@@ -230,8 +223,6 @@
             <p class="font-weight-light mb-0">Ambassador</p>
             <div id="social-links">
               <a href="https://www.linkedin.com/in/navidghomeshi/"><i class="fab fa-linkedin-in"></i></a>
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-github"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fas fa-globe"></i></a> -->
             </div>
           </div>
         </div>
@@ -257,9 +248,8 @@
             <h5>Chimeziri Mbionwu</h5>
             <p class="font-weight-light mb-0">Technical Officer</p>
             <div id="social-links">
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-linkedin-in"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-github"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fas fa-globe"></i></a> -->
+              <a href="https://www.linkedin.com/in/chimeziri-mbionwu-104b8317a/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/Novacane01"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -285,9 +275,6 @@
             <h5>Christian Sarmiento</h5>
             <p class="font-weight-light mb-0">Head of Outreach</p>
             <div id="social-links">
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-linkedin-in"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-github"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fas fa-globe"></i></a> -->
             </div>
           </div>
         </div>
@@ -298,22 +285,18 @@
             <h5>Megan Morich</h5>
             <p class="font-weight-light mb-0">Graphic Designer</p>
             <div id="social-links">
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-linkedin-in"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-github"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fas fa-globe"></i></a> -->
             </div>
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/mckenna.jpg" alt="">
-            <h5>McKenna Ville</h5>
-            <p class="font-weight-light mb-0">Graphic Designer</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/amar.jpg" alt="">
+            <h5>Amar Suchak</h5>
+            <p class="font-weight-light mb-0">Ambassador</p>
             <div id="social-links">
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-linkedin-in"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fab fa-github"></i></a> -->
-              <!-- <a href="https://www.instagram.com/ufsec/"><i class="fas fa-globe"></i></a> -->
+              <a href="https://www.linkedin.com/in/amar-suchak-510a23b9/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/amarsgithub"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
