--- a/tutorials.html
+++ b/tutorials.html
@@ -41,7 +41,7 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a class="nav-link" href="index.html#about-us"> About Us </a></li>
               <!-- <li class="nav-item"><a class="nav-link" href="events.html"> Events </a></li> -->
-              <!-- <li class="nav-item"><a class="nav-link" href="projects.html"> Projects </a></li> -->
+              <li class="nav-item"><a class="nav-link" href="projects.html"> Projects </a></li>
               <li class="nav-item"><a class="nav-link" href="tutorials.html"> Tutorials </a></li>
               <li class="nav-item"><a class="nav-link" href="index.html#sponsors"> Sponsors </a></li>
               <li class="nav-item"><a class="nav-link" href="index.html#connect"> Join </a></li>
