Updated the project page footer

--- a/projects.html
+++ b/projects.html
@@ -236,9 +236,9 @@
               <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> -->
 
               <div class="social-icon">
-    	           <a href="https://www.facebook.com/groups/ufsec/"><i class="fab fa-facebook-f"></i></a>
+                 <a href="https://www.facebook.com/groups/ufsec/"><i class="fab fa-facebook-f"></i></a>
                  <a href="https://www.instagram.com/ufsec/"><i class="fab fa-instagram"></i></a>
-    	           <a href="https://join.slack.com/t/ufsec/shared_invite/enQtNDM0NTc1Mzg2OTE3LTNhOTNiZTc4YzJlNzRmYzBlYTliZGQyZDRmZjdiODc5ZjA1MjU0OTg2MGY0MTc5YmU1OWU0YzA3OGI4N2UwNWI"><i class="fab fa-slack"></i></a>
+                 <a href="https://join.slack.com/t/ufsec/shared_invite/enQtNDM0NTc1Mzg2OTE3LTNhOTNiZTc4YzJlNzRmYzBlYTliZGQyZDRmZjdiODc5ZjA1MjU0OTg2MGY0MTc5YmU1OWU0YzA3OGI4N2UwNWI"><i class="fab fa-slack"></i></a>
               </div>
             </div>
 
@@ -248,8 +248,8 @@
               <h5 class="text-uppercase">MENU</h5>
               <ul class="list-unstyled">
                 <li><a href="#about-us">About Us</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <!-- <li><a href="events.html">Events</a></li> -->
+                <!-- <li><a href="projects.html">Projects</a></li> -->
                 <li><a href="tutorials.html">Tutorials</a></li>
               </ul>
             </div>
@@ -265,7 +265,7 @@
         </div>
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2019 Copyright:
-          <a href="https://mdbootstrap.com/education/bootstrap/"> ufsec.com</a> All rights reserved.
+          <a href="http://ufsec.com/"> ufsec.com</a> All rights reserved.
         </div>
     </footer>
 
