Changed Amar's picture and Add Ankit's info

--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
             <h5>Ankit Vishnubhotla</h5>
             <p class="font-weight-light mb-0">Treasurer</p>
             <div id="social-links">
+              <a href="https://www.linkedin.com/in/ankit-vishnu/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/ankitvishnu23"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -302,7 +304,7 @@
 
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/amar.JPG" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/amar.jpg" alt="">
             <h5>Amar Suchak</h5>
             <p class="font-weight-light mb-0">Ambassador</p>
             <div id="social-links">
