--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/amar.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/hhfhfh.fgg" alt="">
             <h5>Amar Suchak</h5>
             <p class="font-weight-light mb-0">Ambassador</p>
             <div id="social-links">
