Updated some of the officers positions

--- a/index.html
+++ b/index.html
@@ -170,25 +170,11 @@
       <div class="row wow fadeInUp">
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/matthew.jpg" alt="">
-            <h5>Matthew Hannan</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/navid.jpg" alt="">
+            <h5>Navid Ghomeshi</h5>
             <p class="font-weight-light mb-0">President</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/mattjhannan/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/matthewhannan"><i class="fab fa-github"></i></a>
-              <a href="http://matthewhannan.com"><i class="fas fa-globe"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/zeeshan.jpg" alt="">
-            <h5>Zeeshan Habbib</h5>
-            <p class="font-weight-light mb-0">Vice President</p>
-            <div id="social-links">
-              <a href="https://www.linkedin.com/in/zeeshan-habib/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/zhabib3"><i class="fab fa-github"></i></a>
-              <a href="https://zhabib3.github.io/"><i class="fas fa-globe"></i></a>
+              <a href="https://www.linkedin.com/in/navidghomeshi/"><i class="fab fa-linkedin-in"></i></a>
             </div>
           </div>
         </div>
@@ -196,10 +182,22 @@
           <div class="officer-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/officers/ankit.jpg" alt="">
             <h5>Ankit Vishnubhotla</h5>
-            <p class="font-weight-light mb-0">Treasurer</p>
+            <p class="font-weight-light mb-0">Vice President</p>
             <div id="social-links">
               <a href="https://www.linkedin.com/in/ankit-vishnu/"><i class="fab fa-linkedin-in"></i></a>
               <a href="https://github.com/ankitvishnu23"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/zeeshan.jpg" alt="">
+            <h5>Zeeshan Habbib</h5>
+            <p class="font-weight-light mb-0">Head of Development</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/zeeshan-habib/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/zhabib3"><i class="fab fa-github"></i></a>
+              <a href="https://zhabib3.github.io/"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -231,11 +229,10 @@
 
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/navid.jpg" alt="">
-            <h5>Navid Ghomeshi</h5>
-            <p class="font-weight-light mb-0">Ambassador</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/christian.jpg" alt="">
+            <h5>Christian Sarmiento</h5>
+            <p class="font-weight-light mb-0">Head of Outreach</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/navidghomeshi/"><i class="fab fa-linkedin-in"></i></a>
             </div>
           </div>
         </div>
@@ -282,15 +279,7 @@
 
 
       <div class="row wow fadeInUp">
-        <div class="col-lg-4">
-          <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/christian.jpg" alt="">
-            <h5>Christian Sarmiento</h5>
-            <p class="font-weight-light mb-0">Head of Outreach</p>
-            <div id="social-links">
-            </div>
-          </div>
-        </div>
+
 
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
