Updated some of the officers' positions

--- a/index.html
+++ b/index.html
@@ -205,21 +205,12 @@
 
 
       <div class="row wow fadeInUp">
-        <div class="col-lg-4">
-          <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/daniela.jpg" alt="">
-            <h5>Daniela Vertiz</h5>
-            <p class="font-weight-light mb-0">Secretary</p>
-            <div id="social-links">
-            </div>
-          </div>
-        </div>
 
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/officers/garrett.jpg" alt="">
             <h5>Garrett Kost</h5>
-            <p class="font-weight-light mb-0">Secretary</p>
+            <p class="font-weight-light mb-0">Head of Operation</p>
             <div id="social-links">
               <a href="http://linkedin.com/in/garrettkost"><i class="fab fa-linkedin-in"></i></a>
               <a href="https://github.com/garrettkost"><i class="fab fa-github"></i></a>
@@ -236,6 +227,17 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/daniela.jpg" alt="">
+            <h5>Daniela Vertiz</h5>
+            <p class="font-weight-light mb-0">Secretary</p>
+            <div id="social-links">
+            </div>
+          </div>
+        </div>
+
       </div>
 
 
@@ -280,8 +282,7 @@
 
       <div class="row wow fadeInUp">
 
-
-        <div class="col-lg-4">
+        <div class="col-lg-12">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/officers/megan.jpg" alt="">
             <h5>Megan Morich</h5>
@@ -291,17 +292,6 @@
           </div>
         </div>
 
-        <div class="col-lg-4">
-          <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/amar.JPG" alt="">
-            <h5>Amar Suchak</h5>
-            <p class="font-weight-light mb-0">Ambassador</p>
-            <div id="social-links">
-              <a href="https://www.linkedin.com/in/amar-suchak-510a23b9/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/amarsgithub"><i class="fab fa-github"></i></a>
-            </div>
-          </div>
-        </div>
       </div>
 
     </div>
