Updated new officers

--- a/index.html
+++ b/index.html
@@ -170,19 +170,9 @@
       <div class="row wow fadeInUp">
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/navid.jpg" alt="">
-            <h5>Navid Ghomeshi</h5>
-            <p class="font-weight-light mb-0">President</p>
-            <div id="social-links">
-              <a href="https://www.linkedin.com/in/navidghomeshi/"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="officer-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/officers/ankit.jpg" alt="">
             <h5>Ankit Vishnubhotla</h5>
-            <p class="font-weight-light mb-0">Vice President</p>
+            <p class="font-weight-light mb-0">President</p>
             <div id="social-links">
               <a href="https://www.linkedin.com/in/ankit-vishnu/"><i class="fab fa-linkedin-in"></i></a>
               <a href="https://github.com/ankitvishnu23"><i class="fab fa-github"></i></a>
@@ -193,7 +183,7 @@
           <div class="officer-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/officers/zeeshan.jpg" alt="">
             <h5>Zeeshan Habbib</h5>
-            <p class="font-weight-light mb-0">Head of Development</p>
+            <p class="font-weight-light mb-0">Vice President</p>
             <div id="social-links">
               <a href="https://www.linkedin.com/in/zeeshan-habib/"><i class="fab fa-linkedin-in"></i></a>
               <a href="https://github.com/zhabib3"><i class="fab fa-github"></i></a>
@@ -201,11 +191,22 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/pablo.jpg" alt="">
+            <h5>Pablo Estrada</h5>
+            <p class="font-weight-light mb-0">Head of Development</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/pablo-estrada/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/pablof300/"><i class="fab fa-github"></i></a>
+              <a href="https://pabloestrada.me"><i class="fas fa-globe"></i></a>
+            </div>
+          </div>
+        </div>
       </div>
 
 
       <div class="row wow fadeInUp">
-
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="img/officers/garrett.jpg" alt="">
@@ -217,63 +218,62 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/christian.jpg" alt="">
-            <h5>Christian Sarmiento</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/lina.jpg" alt="">
+            <h5>Lina Soufny</h5>
             <p class="font-weight-light mb-0">Head of Outreach</p>
             <div id="social-links">
+              <a href="http://linkedin.com/in/lina-s-54abb5122"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/lsoufny"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
-
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/daniela.jpg" alt="">
-            <h5>Daniela Vertiz</h5>
-            <p class="font-weight-light mb-0">Secretary</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/david.png" alt="">
+            <h5>David Sadowsky</h5>
+            <p class="font-weight-light mb-0">Head of Product</p>
             <div id="social-links">
+              <a href="https://www.linkedin.com/in/david-sadowsky-221309146/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/DavidSadowsky"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
-
       </div>
 
 
       <div class="row wow fadeInUp">
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/daniel.jpg" alt="">
-            <h5>Daniel Garzon-Moreno</h5>
-            <p class="font-weight-light mb-0">Technical Officer</p>
-            <div id="social-links">
-              <a href="https://www.linkedin.com/in/danielgarzonmoreno/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/dgarzonmoreno"><i class="fab fa-github"></i></a>
-              <a href="https://dgarzonmoreno.github.io"><i class="fas fa-globe"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/chimeziri.jpg" alt="">
-            <h5>Chimeziri Mbionwu</h5>
-            <p class="font-weight-light mb-0">Technical Officer</p>
-            <div id="social-links">
-              <a href="https://www.linkedin.com/in/chimeziri-mbionwu-104b8317a/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/Novacane01"><i class="fab fa-github"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/alexander.jpg" alt="">
-            <h5>Alexander Augustin</h5>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/kevin.jpg" alt="">
+            <h5>Kevin Thomas</h5>
             <p class="font-weight-light mb-0">Webmaster</p>
             <div id="social-links">
-              <a href="https://www.linkedin.com/in/lexaugustin/"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/lexaugustin"><i class="fab fa-github"></i></a>
-              <a href="http://lexaugustin.com/"><i class="fas fa-globe"></i></a>
+              <a href="https://www.linkedin.com/in/kvinthms/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/kvinthms"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/evan.jpg" alt="">
+            <h5>Evan Rupert</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/evan-rupert/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/evanrupert"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/natascha.jpg" alt="">
+            <h5>Natascha Kempfe</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/natascha-kempfe/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/nlkempfe"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -281,18 +281,60 @@
 
 
       <div class="row wow fadeInUp">
-
-        <div class="col-lg-12">
+        <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/megan.jpg" alt="">
-            <h5>Megan Morich</h5>
-            <p class="font-weight-light mb-0">Graphic Designer</p>
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/sayed.jpg" alt="">
+            <h5>Sayed Afif</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
             <div id="social-links">
+              <a href="https://www.linkedin.com/in/sayedafif/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/sayedafif"><i class="fab fa-github"></i></a>
+              <a href="https://sayedafif.com/"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
-
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/dylan.png" alt="">
+            <h5>Dylan Hawley</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/dylanhawley/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/dylanhawley"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/joel.jpg" alt="">
+            <h5>Joel Rios</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/imjoelrios/"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/imjoelrios"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
       </div>
+
+
+      <div class="row wow fadeInUp">
+        <div class="col-lg-4">
+          <!-- Spacer -->
+        </div>
+        <div class="col-lg-4">
+          <div class="officer-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/lia.jpg" alt="">
+            <h5>Lia Passaglia</h5>
+            <p class="font-weight-light mb-0">Technical Officer</p>
+            <div id="social-links">
+              <a href="https://www.linkedin.com/in/maria-lia-passaglia//"><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/liapassaglia"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
     </div>
   </section>
