--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         </div>
         <div class="col-lg-4">
           <div class="officer-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/officers/lia.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/officers/lia.JPG" alt="">
             <h5>Lia Passaglia</h5>
             <p class="font-weight-light mb-0">Technical Officer</p>
             <div id="social-links">
